# identity

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml  schema.graphql
.cargo/: config.toml
.github/workflows/: deploy.yml
.sqlx/: query-059fa266a2b03b791500d07d5d2fd9251b276e93b57f24e49e6719e8176e6fdc.json  query-080c707f47d84f0c720463ead4f89f27f112151f25b666e3a235809923ea9e3f.json  query-092d2ae6ea9d05e6ee173d2e7d57645296c4fa0a836874113feb0df133143f79.json  query-0beccec368c2fde6e87d5124c81338dd0344d37bb2a65fe242d0a0191a6dcee6.json  query-0d4d698b039ac95743392f44379bd1b8881297a06d0e0d333b065aec5d9da24e.json  query-124262b209626580fe490f09855a182fc8da69864004b1922093b76cd08f2592.json  query-1530998077024c00c5595a26484653e59b902c2028453a0659340f7ccfb46806.json  query-161e5970ecdb5947b7b9ee7575d37078322062d87fab862626ad9977d4541dc5.json  query-192fcf5fce98fcd5ecb25c5dba3b1ac40a77cdb029164f758be9dc83f484e762.json  query-2651c7c3fa305fb59858af54bf5fef960d84f1d0f3451ef494cc98c038aa48a6.json  query-2bcbf02bbba6a986877a0f94d08bd5179dcb416ddd6f373b76310f924ff25c42.json  query-2c8ffe09aeb620d8307118f51d2d5c90b5885000215d3d4d5021af83de593267.json  query-307634b94ae73fd9c32a4f8a7141577fe30fb2974c39d7a17ef45a09b1b1126e.json  query-310c0bd605f16a6e985625b70480154d6caec424bbfd365c7abf1279063497ff.json  query-3413b0a7ed98f7535b2b994c5f8ae8265e01edcba2e41899b8d05ae3edab5d71.json  query-3b1ac432fa59f5a6ad0aa954ee5f483a843f066d996e277e34fb2b4a6b322d26.json  query-3b7d108e1efaeaaf303b986a82d64d058245cc7956281e32517b7e42b3be406e.json  query-3ca6ac1b0b336a30cd24f0694c9aa6596b5fd33844b3a2692a05086bf41c3a66.json  query-3dc42a78f293e485f2f3db1f51d3f36b5a5344f01cb36c76642b9b24d1c940b3.json  query-4705283758004d02657e6bfdcdf5805217ae29804d81698ea94d2b930225685e.json  query-4915180e5242cf545086853688465a6b86e1539f42bf3418f5432c17d7751592.json  query-4bb91987673293f80c352bf7712afe308eb4ee28101862b152a0286e1983434a.json  query-53661512565b85769f712957d5a4237d7ce53461c1045808c8a7e99bd8ba04d4.json  query-54240d26204511c5b6732c32e849476b6bd18831d03d90df0c892f4eabc5baaa.json  query-56903e824b1fccd347670f943cf44a5a0f0abc0f4a0c0d1947db44acc14e6cf2.json  query-5739c91c240da0da2bffe2d3d1ee6a72ec99eb531d72cc3edc673df21f3b9afd.json  query-6641c32df763045cd1d5e5478aed67e84431ea3b1be03afd01ae9ae75744da09.json  query-668672e53d9a9c9791f9e1dc60cee60b49602ddf18b70fec3a51dafff0804660.json  query-66889e88d85a23e046676a033b92b41c5a272ce7b946681b96d0d4a0b2b02fb5.json  query-66b457ff75a61a9492b3c2ee9ef0385e4d0ea747d9a9e46f797282787c87fb1b.json  query-6aa55bbec2c420a22c544ee6f12bf4776f75596322923c5d456d0a6df440933f.json  query-6b0121472a564117adc4dbef1853fc483e480193506985686305b2e7496b458a.json  query-6be8ec4ecf1944dd9e16d140671517343f5c9dd68b75b1b125350cc82126b288.json  query-7166ca4a7c4e5a3178588306a57cce70ab2121712c9245aec47af72c6f354f77.json  query-74f35b104e8ef6e7634861f01ac6478674dbe2d86544432a53c939230647eb3d.json  query-81afdc191de021767939c828f54da8b2a4a8cf03d6f6d7bb6723eeac8a9abf28.json  query-824b286f84da55472eb3f6e2352312ad4b1fe79e530819fa629b4922676e81c0.json  query-82b2de3a9ce16e8bdfe75d1fa9ab39af1f618b4f051346b12ac0dd5b9525c957.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-84cae5d3f457464cb5ebaf0accedfe2f7dc44c516871a5fa8cbe132019824635.json  (+30 more)
common/: Cargo.toml
common/src/: database.rs  lib.rs  logging.rs  otel.rs
database/: Cargo.toml
database/src/: custom_domain.rs  event.rs  identity.rs  lib.rs  loaders.rs  organization.rs  organizer.rs  participant.rs  provider.rs  stubs.rs  types.rs  user.rs
graphql/: Cargo.toml
graphql/src/: entities.rs  errors.rs  lib.rs  loaders.rs  logging.rs  query.rs  webhooks.rs
graphql/src/mutation/: event.rs  identity.rs  mod.rs  organization.rs  organizer.rs  participant.rs  providers.rs  user.rs  validators.rs
migrations/: 20230830202048_create_providers_table.down.sql  20230901043129_create_identities_table.up.sql  20230908220744_create_organizers_table.up.sql  20230908220752_create_participants_table.up.sql  20240127074838_create_organizations_table.up.sql  20240127074950_create_events_table.up.sql  20240127075035_create_custom_domains_table.up.sql  20240127081801_add_foreign_key_constraints_between_merged_tables.down.sql  20240127081801_add_foreign_key_constraints_between_merged_tables.up.sql  20240128215754_add_organizer_roles.down.sql  20240128215754_add_organizer_roles.up.sql  20240314203725_remove_provider_icon.down.sql  20240314203725_remove_provider_icon.up.sql
migrator/: Cargo.toml
migrator/migrations/: 20230830202048_create_providers_table.up.sql  20230901012344_create_users_table.up.sql
migrator/src/: error.rs  lib.rs  main.rs
session/: Cargo.toml
session/src/: error.rs  lib.rs  middleware.rs  store.rs
session/src/extract/: base.rs  mod.rs  oauth.rs  registration_needed.rs  unauthenticated.rs
src/: handlers.rs  lib.rs  logging.rs  main.rs  oauth.rs  session.rs  state.rs
src/handlers/: context.rs  error.rs  oauth.rs
src/handlers/oauth/: client.rs  error.rs
src/oauth/: error.rs
src/session/: middleware.rs  store.rs
src/session/extract/: base.rs  mod.rs  oauth.rs  registration_needed.rs  unauthenticated.rs  user.rs
state/: Cargo.toml
state/src/: domains.rs  lib.rs  urls.rs
xtask/: Cargo.toml
xtask/src/: export_schema.rs  main.rs  migrate.rs  sessions.rs  util.rs
