[package]
name = "identity"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true, features = ["playground"] }
async-graphql-axum = "6.0"
axum = { workspace = true, features = ["http1", "http2", "query", "tokio"] }
axum-extra = { version = "0.8", features = ["cookie"] }
base64 = "0.21"
blake3 = "1"
bytes = "1"
chrono = { workspace = true, features = ["serde"] }
clap = { version = "4.3", features = ["derive", "env"] }
color-eyre.workspace = true
cookie = "0.17"
database.workspace = true
dotenvy = "0.15"
eyre.workspace = true
form_urlencoded = "1.2"
futures.workspace = true
graphql.workspace = true
hmac = "0.12"
logging = { workspace = true, features = ["http", "opentelemetry"] }
rand.workspace = true
redis = { version = "0.23", default-features = false, features = ["aio", "connection-manager", "tokio-comp"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
time = "0.3"
tokio = { workspace = true, features = ["macros", "signal"] }
tower = { version = "0.4", default-features = false }
tracing.workspace = true
url = { version = "2.4", features = ["serde"] }

[workspace]
members = [
  "database",
  "graphql",
]

[workspace.dependencies]
async-graphql = { version = "6.0", features = ["chrono"], default-features = false }
axum = { version = "0.6", default-features = false }
chrono = "0.4"
color-eyre = "0.6"
eyre = "0.6"
futures = { version = "0.3", default-features = false, features = ["async-await", "std"] }
logging = { version = "0.1", registry = "wafflehacks" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }

database = { path = "./database" }
graphql = { path = "./graphql" }
