[package]
name = "identity"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true, features = ["playground"] }
async-graphql-axum = "6.0"
axum = { workspace = true, features = ["form", "headers", "http1", "http2", "query", "tokio"] }
clap.workspace = true
color-eyre.workspace = true
context = { workspace = true, features = ["axum"] }
database.workspace = true
dotenvy.workspace = true
eyre.workspace = true
form_urlencoded = "1.2"
futures.workspace = true
globset = { version = "0.4", default-features = false }
graphql.workspace = true
logging = { workspace = true, features = ["http", "opentelemetry"] }
rand.workspace = true
redis.workspace = true
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
session = { workspace = true, features = ["server"] }
tokio = { workspace = true, features = ["macros", "signal"] }
tracing.workspace = true
url.workspace = true

[workspace]
members = [
  "database",
  "graphql",
  "session",
  "xtask",
]

[workspace.dependencies]
async-graphql = { version = "6.0", features = ["chrono"], default-features = false }
axum = { version = "0.6", default-features = false }
chrono = "0.4"
clap = { version = "4.4", features = ["derive", "env"] }
color-eyre = "0.6"
context = { version = "0.5", registry = "wafflehacks" }
dotenvy = "0.15"
eyre = "0.6"
futures = { version = "0.3", default-features = false, features = ["async-await", "std"] }
logging = { version = "0.2", registry = "wafflehacks" }
rand = "0.8"
redis = { version = "0.23", default-features = false, features = ["aio", "connection-manager", "tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
url = "2.4"

database = { path = "./database" }
graphql = { path = "./graphql" }
session = { path = "./session" }
