[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
eyre = { workspace = true }
opentelemetry = { version = "0.20", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.13", default-features = false, features = ["grpc-tonic", "http-proto", "reqwest-client", "reqwest-rustls", "tls", "tls-roots", "trace"] }
tracing = { workspace = true }
tracing-error = "0.2"
tracing-opentelemetry = { version = "0.21", default-features = false, features = ["tracing-log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
