[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { workspace = true, optional = true }
chrono = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.7", features = ["chrono", "json", "macros", "postgres", "runtime-tokio", "tls-rustls"] }
tracing = { workspace = true }

[features]
default = []
graphql = ["async-graphql"]
