[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { workspace = true, features = ["dataloader"], optional = true }
async-trait = { version = "0.1", optional = true }
chrono.workspace = true
context.workspace = true
eyre.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["chrono", "json", "macros"] }
tokio = { workspace = true, optional = true }
tracing.workspace = true

[features]
default = []
graphql = ["async-graphql", "async-trait", "tokio"]
