[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql.workspace = true
database = { workspace = true, features = ["graphql"] }
logging = { workspace = true, features = ["graphql"] }
tracing.workspace = true
url = "2.4"
