[package]
name = "migrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
database = { workspace = true }
dotenvy = { workspace = true }
eyre = { workspace = true }
hex = "0.4"
logging = { workspace = true, features = ["opentelemetry"] }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
