[package]
name = "session"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, features = ["json"], optional = true }
axum-extra = { version = "0.8", features = ["cookie"] }
base64 = "0.21"
blake3 = "1"
bytes = "1"
chrono = { workspace = true, features = ["serde"] }
cookie = "0.17"
database.workspace = true
futures = { workspace = true, optional = true }
hmac = "0.12"
rand.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
time = "0.3"
tokio.workspace = true
tower = { version = "0.4", default-features = false }
tracing.workspace = true
url = { workspace = true, features = ["serde"] }

[features]
default = []
server = ["axum", "futures"]
