[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
database = { workspace = true }
dotenvy = { workspace = true }
eyre = { workspace = true }
graphql = { workspace = true }
logging = { workspace = true }
migrator = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
