[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
color-eyre = "0.6"
dotenvy = "0.15"
eyre = "0.6"
graphql = { path = "../graphql" }
logging = { version = "0.1", registry = "wafflehacks" }
migrator = { version = "0.2", registry = "wafflehacks" }
sqlx = { version = "0.7", features = ["migrate", "postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"

[workspace]
